[gd_scene load_steps=2 format=3 uid="uid://cugssco5vlbj1"]

[ext_resource type="Script" path="res://core/widgets/nft_create_popup.gd" id="1_7btvb"]

[node name="Nft-create-popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7btvb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "NFT Name:"

[node name="NameInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter NFT name"

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "NFT Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Pick Color"

[node name="IssueButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Issue NFT"
